--- a/datadog.yaml
+++ b/datadog.yaml
@@ -1,8 +1,8 @@
 ac_exclude: []
 ac_include: []
 ad_config_poll_interval: 10
-additional_checksd: c:\programdata\datadog\checks.d
-api_key: 5321dfc8ff286241945c10c6f21e40fe
+additional_checksd: C:\ProgramData\Datadog\checks.d
+api_key: 6750241e300506cae9d137fc27c156c5
 apm_config:
   enabled: false
 app_key: ""
@@ -12,6 +12,7 @@ autoconf_template_url_timeout: 5
 bind_host: localhost
 bosh_id: ""
 check_runners: 4
+checks_tag_cardinality: low
 cloud_foundry: false
 cluster_agent:
   auth_token: ""
@@ -21,6 +22,8 @@ cluster_agent:
   url: ""
 cluster_checks:
   enabled: false
+  node_expiration_timeout: 30
+  warmup_duration: 30
 cluster_name: ""
 cmd_host: localhost
 cmd_port: 5001
@@ -28,14 +31,17 @@ collect_ec2_tags: false
 collect_gce_tags: true
 collect_kubernetes_events: false
 conf_path: .
-confd_path: c:\programdata\datadog\conf.d
+confd_path: C:\ProgramData\Datadog\conf.d
+container_cgroup_prefix: ""
 container_cgroup_root: /sys/fs/cgroup/
 container_proc_root: /proc
+containerd_namespace: k8s.io
 cri_connection_timeout: 1
 cri_query_timeout: 5
 cri_socket_path: ""
 default_integration_http_timeout: 9
 disable_file_logging: false
+disable_py3_validation: false
 docker_env_as_tags: {}
 docker_labels_as_tags: {}
 docker_query_timeout: 5
@@ -49,6 +55,7 @@ dogstatsd_socket: ""
 dogstatsd_stats_buffer: 10
 dogstatsd_stats_enable: false
 dogstatsd_stats_port: 5000
+dogstatsd_tag_cardinality: low
 dogstatsd_tags: []
 ecs_agent_container_name: ecs-agent
 ecs_agent_url: ""
@@ -69,8 +76,12 @@ external_metrics_provider:
   bucket_size: 300
   enabled: false
   local_copy_refresh_rate: 30
-  max_age: 90
+  max_age: 120
+  port: 443
   refresh_period: 30
+  rollup: 30
+extra_config_providers: []
+extra_listeners: []
 force_tls_12: false
 forwarder_backoff_base: 2
 forwarder_backoff_factor: 2
@@ -80,8 +91,8 @@ forwarder_recovery_interval: 2
 forwarder_recovery_reset: false
 forwarder_retry_queue_max_size: 30
 forwarder_timeout: 20
-full_cardinality_tagging: false
 gui_port: "5002"
+health_port: 0
 histogram_aggregates:
 - max
 - median
@@ -97,6 +108,8 @@ hpa_configmap_name: datadog-custom-metrics
 hpa_watcher_gc_period: 300
 hpa_watcher_polling_freq: 10
 jmx_custom_jars: []
+jmx_max_restarts: 3
+jmx_restart_interval: 5
 jmx_use_cgroup_memory_limit: false
 kube_resources_namespace: ""
 kubelet_auth_token_path: ""
@@ -124,7 +137,7 @@ leader_lease_duration: "60"
 log_enabled: false
 log_file: ""
 log_format_json: false
-log_level: warning
+log_level: info
 log_payloads: false
 log_to_console: true
 log_to_syslog: false
@@ -132,20 +145,18 @@ logging_frequency: 20
 logs_config:
   container_collect_all: false
   dd_port: 10516
-  dd_url: agent-intake.logs.datadoghq.com
   dd_url_443: agent-443-intake.logs.datadoghq.com
   dev_mode_use_proto: true
   frame_size: 9000
-  logs_dd_url: ""
   logs_no_ssl: false
   open_files_limit: 100
-  run_path: ""
+  run_path: C:\ProgramData\Datadog\run
   socks5_proxy_address: ""
   stop_grace_period: 30
-  tcp_forward_port: -1
   use_port_443: false
-logs_enabled: true
+logs_enabled: false
 logset: ""
+metrics_port: "5000"
 proc_root: /proc
 process_config:
   enabled: "true"
@@ -169,6 +180,7 @@ use_v2_api:
   series: false
   service_checks: false
 dd_url: https://10.199.100.6:3834
+log_level: warning
 apm_config:
   enabled: false
 logs_enabled: true
