--- a/windows_service.d/conf_ad.yaml
+++ b/windows_service.d/conf_ad.yaml
@@ -2,7 +2,7 @@
 init_config:
  
 instances:
-    -   host: . # "." means the current host
+    -   host: .
         services:
           - DNS
           - NTDS
