--- a/win32_event_log.d/conf_default.yaml
+++ b/win32_event_log.d/conf_default.yaml
@@ -8,6 +8,13 @@ instances:
       - Critical
     tags:
       - system
+    event_id:
+      - 1001
+	    - 41
+	    - 6008
+	    - 1074
+	    - 1076
+    
   - log_file:
       - Security
     type:
