--- a/win32_event_log.d/conf_default.yaml
+++ b/win32_event_log.d/conf_default.yaml
@@ -5,19 +5,17 @@ instances:
       - System
     tags:
       - system
+    type: 
+      - Warning
+      - Error
+      - Information
+	    - Critical
     event_id:
       - 1001
       - 41
       - 6008
       - 1074
       - 1076
-    
-  - log_file:
-      - Security
-    type:
-      - Audit Failure
-    tags:
-      - audit_failure, security
 
   - log_file:
       - Security
