--- a/win32_event_log.d/conf_default.yaml
+++ b/win32_event_log.d/conf_default.yaml
@@ -12,7 +12,6 @@ instances:
       - 1074
       - 1076
       - 7034
-      - 7036
 
   - log_file:
       - Security
@@ -26,3 +25,9 @@ instances:
       - 4756
       - 4625
       - 4648
+logs:
+  - type: windows_event
+    channel_path: System
+    source: System
+    service: Events_System
+    sourcecategory: windowsevent
